kbd-chooser (1.06) UNRELEASED; urgency=low

  * Joshua Kwan
    - remove myself from Uploaders

 -- Joshua Kwan <joshk@triplehelix.org>  Wed, 20 Oct 2004 17:20:22 -0700

kbd-chooser (1.05) unstable; urgency=high

  * Recai Oktas
    - debian/prebaseconfig
      - Workaround for fixing side effects while loading keymaps in
        non Latin-1, non UTF-8 environments, for Turkish, Hebrew,
        Lithuanian, Latvian. Closes: #276752
  * Christian Perrier
    - debian/templates-in
      - File renamed to kbd-chooser.templates-in for better readability
        of merged PO files

 -- Christian Perrier <bubulle@debian.org>  Mon, 18 Oct 2004 23:09:40 +0200

kbd-chooser (1.04) unstable; urgency=low

  * Updated translations: 
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure
    - Welsh (cy.po) by Dafydd Harries
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Spanish (Castilian) (es.po) by Javier Fernandez-Sanguino Peña
    - Basque (eu.po) by Piarres Beobide Egaña
    - Finnish (fi.po) by Tapio Lehtonen
    - Hebrew (he.po) by Lior Kaplan
    - Hungarian (hu.po) by VEROK Istvan
    - Indonesian (id.po) by Debian Indonesia Team
    - Japanese (ja.po) by Kenshi Muto
    - Latvian (lv.po) by Aigars Mahinovs
    - Bøkmal, Norwegian (nb.po) by Bjorn Steensrud
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Romanian (ro.po) by Eddy Petrisor
    - Slovenian (sl.po) by Jure Čuhalev
    - Albanian (sq.po) by Elian Myftiu
    - Swedish (sv.po) by Per Olofsson
    - Turkish (tr.po) by Recai Oktaş
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Wed,  6 Oct 2004 14:19:34 -0400

kbd-chooser (1.03) unstable; urgency=low

  * Joey Hess
    - Use debhelper's udeb support.
  * Joey Schulze
    - Corrected defines for code that should only run on little endian