@@ -1,9 +1,15 @@
 kbd-chooser (1.06) UNRELEASED; urgency=low
 
+  * Frans Pop
+    - Fix error in parsing locale to set correct default keymap
+      for locales with a modifier or charmap. Closes: #274692
+    - Fix logical error in check for charset when determining the
+      default keymap
   * Joshua Kwan
     - remove myself from Uploaders
+  * 
 
- -- Joshua Kwan <joshk@triplehelix.org>  Wed, 20 Oct 2004 17:20:22 -0700
+ -- Frans Pop <aragorn@tiscali.nl>  Sat,  6 Nov 2004 23:21:43 +0100
 
 kbd-chooser (1.05) unstable; urgency=high
 
